--- a/config.ini
+++ b/config.ini
@@ -1,13 +1,13 @@
-[Default]
-ccfraud_usv_train=2000
-ccfraud_sv_train=2000
-ccfraud_sv_train_fraud=20
-
+[DEFAULT]
 paysim_usv_train=2000
 paysim_sv_train=2000
 paysim_sv_train_fraud=20
 
-ieee_usv_train=2000
-ieee_sv_train=2000
-ieee_sv_train_fraud=50
+ccfraud_usv_train=2000
+ccfraud_sv_train=2000
+ccfraud_sv_train_fraud=20
+
+ieee_usv_train=5000
+ieee_sv_train=5000
+ieee_sv_train_fraud=200
 
