--- a/data/saperp-vk/config.yaml
+++ b/data/saperp-vk/config.yaml
@@ -15,22 +15,18 @@ parameters:
     d_dim: [dim_input, 128, 64, 2]
     g_dim: [64, 128, dim_input]
   autoencoder:
-    dims: [dim_input, 128, 64, 32, 16, 8, 3]
+    dims: [dim_input, 512, 256, 128, 64, 32, 16, 8, 3]
   vae:
     intermediate_dim: 100
     latent_dim: 2
   rbm:
     num_hidden: 48
 path:
-  one: './data/saperp/'
+  one: './data/saperp-vk'
 metadata:
   source: --
-  entries: 12407
-  anomalies: 97
-  frauds: 97
-  benign: 12310
-  features: 147
-  entries_vk: 18111
-  frauds_vk: 37
-  benign_vk: 18074
-  features_vk: 471
+  entries: 18111
+  anomalies: 37
+  frauds: 1
+  benign: 18074
+  features: 471
