Add autoencoder config

--- a/data/nslkdd/config.yaml
+++ b/data/nslkdd/config.yaml
@@ -15,6 +15,11 @@ parameters:
     g_dim: [50, 100, dim_input]
   autoencoder:
     dims: [dim_input, 44, 22, 8, 4]
+    epochs: 50
+    batch_size: 64
+    train_test_split: 0.2
+    learning_rate: 1e-4
+    activation_fct: 'relu'
   vae:
     intermediate_dim: 12
     latent_dim: 2
