--- a/data/saperp-ek/config.yaml
+++ b/data/saperp-ek/config.yaml
@@ -15,7 +15,12 @@ parameters:
     d_dim: [dim_input, 128, 64, 2]
     g_dim: [64, 128, dim_input]
   autoencoder:
-    dims: [dim_input, 128, 64, 32, 16, 8, 3]
+    dims: [dim_input, 16, 8, 4]
+    epochs: 50
+    batch_size: 64
+    train_test_split: 0.2
+    learning_rate: 1e-4
+    activation_fct: 'relu'
   vae:
     intermediate_dim: 100
     latent_dim: 2
