--- a/data/saperp-vk/config.yaml
+++ b/data/saperp-vk/config.yaml
@@ -16,6 +16,11 @@ parameters:
     g_dim: [64, 128, dim_input]
   autoencoder:
     dims: [dim_input, 512, 256, 128, 64, 32, 16, 8, 3]
+    epochs: 50
+    batch_size: 64
+    train_test_split: 0.2
+    learning_rate: 1e-4
+    activation_fct: 'relu'
   vae:
     intermediate_dim: 100
     latent_dim: 2
