--- a/data/ccfraud/config.yaml
+++ b/data/ccfraud/config.yaml
@@ -26,8 +26,9 @@ parameters:
     output_activation_fct: 'sigmoid'
     kernel_regularizer: 'None'
     activity_regularizer: 'None'
-
   vae:
+    epochs: 20
+    batch_size: 32
     intermediate_dim: 12
     latent_dim: 2
     activation_fct: 'relu'
