Add denoising autoencoder

--- a/data/mnist/config.yaml
+++ b/data/mnist/config.yaml
@@ -35,6 +35,19 @@ parameters:
     optimizer: 'adam'
     loss: 'mean_squared_error'
     train_test_split: 0.2
+  dae:
+    dims: [dim_input, 128, 32]
+    epochs: 7
+    batch_size: 32
+    train_test_split: 0.2
+    learning_rate: 1e-3
+    activation_fct: 'relu'
+    output_activation_fct: 'sigmoid'
+    optimizer: 'adam'
+    loss: 'binary_crossentropy'
+    kernel_regularizer: 'None'
+    activity_regularizer: 'None'
+    noise_factor: 0.2
   rbm:
     num_hidden: 180
     visible_unit_type: 'bin' # bin or gauss
