--- a/data/paysim-custom/config.yaml
+++ b/data/paysim-custom/config.yaml
@@ -35,6 +35,19 @@ parameters:
     optimizer: 'adam'
     loss: 'mean_squared_error'
     train_test_split: 0.2
+  dae:
+    dims: [dim_input, 16, 8, 4]
+    epochs: 50
+    batch_size: 64
+    train_test_split: 0.2
+    learning_rate: 1e-4
+    optimizer: 'adam'
+    loss: 'mean_squared_error'
+    activation_fct: 'relu'
+    output_activation_fct: 'sigmoid'
+    kernel_regularizer: 'None'
+    activity_regularizer: 'None'
+    noise_factor: 0.2
   rbm:
     num_hidden: 4
     visible_unit_type: 'bin' # bin or gauss
